# folio

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run.py  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: 508-conformance.md  README.md  accessibility.md  ai.md  architecture.md  editing-and-ocr.md  forms-and-signatures.md  getting-started.md  plugins.md  release-checklist.md  releasing.md  testing.md  theming.md
e2e/: accessibility.spec.ts  annotations.spec.ts  global-setup.ts  mobile.spec.ts  placement.spec.ts  smoke.spec.ts  toolbar.spec.ts
extensions/chrome/: .gitignore  README.md  background.js  build.mjs  manifest.json
extensions/vscode/: .gitignore  .vscodeignore  DEVELOPING.md  DISTRIBUTING.md  LICENSE.txt  README.md  build.mjs  package.json  tsconfig.json
extensions/vscode/fuzz/: fuzz-html.mjs  fuzz-to-pdf.py
extensions/vscode/src/: extension.ts  html.ts
scripts/: check-tauri-versions.mjs  generate-latest.mjs  generate-sbom.mjs  setup-ocr-assets.mjs  sign-windows.ps1
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  deny.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/a11y/: SkipLink.tsx  announcer.ts  focus.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts
src/ai/: aiStore.ts  documentText.ts  index.ts  notesContext.ts  types.ts
src/ai/mcp/: McpClient.ts  McpServer.ts
src/ai/providers/: ClaudeProvider.ts  index.ts
src/commands/: defaultCommands.test.ts  defaultCommands.ts  index.ts  registry.test.ts  registry.ts  types.ts
src/components/MenuBar/: MenuBar.test.tsx  MenuBar.tsx
src/components/Search/: SearchBar.tsx
src/components/Sidebar/: Outline.tsx  PluginPanel.tsx  Sidebar.tsx  Thumbnails.tsx
src/components/Toolbar/: DarkSchemeMenu.tsx  Toolbar.tsx  ToolbarOverflow.tsx  toolbarTools.ts
src/components/Viewer/: EmptyState.test.tsx  EmptyState.tsx  Page.tsx  PdfViewer.tsx
src/components/common/: Button.tsx  Icon.tsx  IconButton.tsx  ToastHost.test.tsx  ToastHost.tsx  index.ts  toastStore.test.ts  toastStore.ts
src/core/document/: openDocument.ts  openFromQuery.ts
src/core/pdf/: PdfEngine.ts  PdfJsEngine.ts  index.ts  setupWorker.ts  types.ts
src/features/about/: AboutModal.tsx
src/features/annotations/: AnnotationLayer.tsx  AnnotationsPanel.tsx  NotesLayer.tsx  bake.test.ts  bake.ts  commands.ts  index.ts  notesUi.ts  store.test.ts  store.ts  types.ts
src/features/contextmenu/: ContextMenu.tsx  index.ts  (+1 more)
src/hooks/: useMediaQuery.ts
src/plugins/: PluginHost.test.ts  PluginHost.ts  contributionStore.test.ts  contributionStore.ts  index.ts  types.ts
src/shims/: node.ts
src/state/: actions.ts  documentStore.test.ts  documentStore.ts  viewerElement.ts  viewerStore.test.ts  viewerStore.ts
src/styles/: global.css
src/theme/: ThemeProvider.tsx  breakpoints.ts  themeStore.test.ts  themeStore.ts  tokens.css
(+70 files in other folders)
