[package]
name = "folio"
version = "0.1.0"
description = "A world-class, open-source PDF viewer"
authors = ["the Folio contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/owenpkent/folio"
rust-version = "1.77"

# The library is what Tauri's mobile targets link against; `main.rs` is a thin
# shim that calls into it. Keep application logic in `lib.rs`.
[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Smaller, faster release binaries.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
